--- a/testPage.html
+++ b/testPage.html
@@ -18,7 +18,7 @@ and open the template in the editor.
                baseUrl: "js",
                shim: {
                    'gl-matrix-min' : {
-                       export: "glMatrix"
+                       exports: "glMatrix"
                    }
                }
             });
