--- a/testCellManager.html
+++ b/testCellManager.html
@@ -17,8 +17,12 @@ and open the template in the editor.
                 baseUrl: "js"
             });
 
-            require(["cellManager"], function(cellManager) {
-                var cellManager = cellManager();
+            require(["graphics","cellManager"], function(graphics, cellManager) {
+                var canvas = document.createElement("canvas");
+                canvas.width = 500;
+                canvas.height = 500;
+                var graphics = graphics({canvas: canvas});
+                var cellManager = cellManager({graphics: graphics});
                 cellManager.testInitFontCanvas();
                 
             });
