CellManager : compute cells position (wip)

--- a/testCellManager.html
+++ b/testCellManager.html
@@ -23,7 +23,7 @@ and open the template in the editor.
                 canvas.height = 500;
                 var graphics = graphics({canvas: canvas});
                 var cellManager = cellManager({graphics: graphics});
-                cellManager.testInitFontCanvas();
+                cellManager.testInitFontsTexture();
                 
             });
         </script>
