--- a/testMain.html
+++ b/testMain.html
@@ -19,7 +19,7 @@ and open the template in the editor.
             });
             
             require(["flipFlap"], function(flipFlap){
-               flipFlap.create(document.getElementById("container"));
+               flipFlap.create(document.getElementById("container"), {col: 3});
             });
         </script>
     </body>
