CellManager : layout management is done

--- a/testMain.html
+++ b/testMain.html
@@ -19,7 +19,7 @@ and open the template in the editor.
             });
             
             require(["flipFlap"], function(flipFlap){
-               flipFlap.create(document.getElementById("container"), {col: 3});
+               flipFlap.create(document.getElementById("container"), {col: 3, row: 1});
             });
         </script>
     </body>
