--- a/testCellManager.html
+++ b/testCellManager.html
@@ -24,7 +24,7 @@ and open the template in the editor.
                 var graphics = graphics({canvas: canvas});
                 var cellManager = cellManager({graphics: graphics});
                 cellManager.testInitFontsTexture();
-                
+//                small git config test
             });
         </script>
     </body>
