--- a/tests/cell_manager.html
+++ b/tests/cell_manager.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Cells manager test page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <script src="js/require.js"></script>
+        <script src="../js/require.js"></script>
         <script>
             require.config({
-                baseUrl: "js"
+                baseUrl: "../js"
             });
 
             require(["graphics","cellManager"], function(graphics, cellManager) {
