--- a/tests/cell_manager.html
+++ b/tests/cell_manager.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Cells manager test page</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-    </head>
-    <body>
-        <script src="../js/require.js"></script>
-        <script>
-            require.config({
-                baseUrl: "../js"
-            });
+  <head>
+    <title>Cells manager test page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <script src="../js/libs/require.js"></script>
+    <script>
+      require.config( {
+        baseUrl: "../js",
+        paths: {
+          jquery: "libs/jquery",
+          text: "libs/text"
+        }
+      } );
 
-            require(["graphics","cellManager"], function(graphics, cellManager) {
-                var canvas = document.createElement("canvas");
-                canvas.width = 500;
-                canvas.height = 500;
-                var graphics = graphics({canvas: canvas});
-                var cellManager = cellManager({graphics: graphics});
-                cellManager.testInitFontsTexture();
-            });
-        </script>
-    </body>
+      require( [ "graphics", "cellManager" ], function( graphics, cellManager ){
+        var canvas = document.createElement( "canvas" );
+        canvas.width = 500;
+        canvas.height = 500;
+        var graphics = graphics( { canvas: canvas } );
+        var cellManager = cellManager( { graphics: graphics } );
+        cellManager.testInitFontsTexture();
+      } );
+    </script>
+  </body>
 </html>
