--- a/demo/demo.html
+++ b/demo/demo.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <div class="instructions">
         <p>Move the cursors to select the number of rows, colums and the speed you want
-          for a the cells of the slip flap displays.</p>
+          for a the cells of the split flap display.</p>
         <p>Each generated field on the right section correspond to a row</p>
         <p>Once satisfied with the settings, fill in the input field that just appeared and press enter.</p>        
       </div>
